<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.changyi</groupId>
    <artifactId>chy-boot</artifactId>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>chy-boot-common</module>
        <module>chy-boot-core</module>
        <module>chy-boot-service</module>
        <module>chy-boot-rest-api</module>
    </modules>

    <packaging>pom</packaging>


    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.3</version>
        <relativePath/>
    </parent>

    <properties>
        <java.version>17</java.version>
        <mybatis-plus.version>3.5.5</mybatis-plus.version>
        <mybatis-spring-boot-starter.version>3.0.3</mybatis-spring-boot-starter.version>
        <hutool-all.version>5.8.26</hutool-all.version>
        <druid-spring-boot-starter.version>1.2.21</druid-spring-boot-starter.version>
        <java-jwt.version>4.4.0</java-jwt.version>
        <springdoc-openapi.version>2.3.0</springdoc-openapi.version>
        <fastjson.version>2.0.47</fastjson.version>
        <knife4j.version>4.4.0</knife4j.version>
        <thumbnailator.version>0.4.20</thumbnailator.version>
        <guava.version>33.0.0-jre</guava.version>
        <dynamic-datasource-spring-boot-starter.version>4.2.0</dynamic-datasource-spring-boot-starter.version>
        <retrofit-spring-boot-starter.version>2.3.7</retrofit-spring-boot-starter.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
    </dependencies>

</project>